--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "package": "electron-packager ./ printer-watcher --all --out ~/Desktop/printer-watcher --version 0.30.2"
-
+    "package": "electron-packager . printer-watcher --platform=darwin --arch=x64 --out ~/Desktop/printer-watcher --version=0.36.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/atom/electron-quick-start.git"
+    "url": "git+https://>ub.com/atom/electron-quick-start.git"
   },
   "keywords": [
     "Electron",
@@ -27,5 +26,8 @@
   "devDependencies": {
     "electron-packager": "^5.2.1",
     "electron-prebuilt": "^0.36.0"
+  },
+  "dependencies": {
+    "printer": "^0.2.1"
   }
 }
