--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "electron-prebuilt": "^0.36.0"
   },
   "dependencies": {
-    "printer": "^0.2.1"
+    "js-base64": "^2.1.9",
+    "printer": "^0.2.1",
+    "rsvp": "^3.2.1"
   }
 }
